<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.project.tictactoe.viewmodel.GameGridViewModel" />
    </data>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_gravity="center">

        <Button
            android:id="@+id/cell_00"
            android:onClick="@{() -> viewModel.onCellClick(0,0)}"
            android:text='@{viewModel.cells["00"]}'
            style="@style/CellButton"/>

        <Button
            android:id="@+id/cell_01"
            android:onClick="@{() -> viewModel.onCellClick(0, 1)}"
            android:text='@{viewModel.cells["01"]}'
            style="@style/CellButton"/>

        <Button
            android:id="@+id/cell_02"
            android:onClick="@{() -> viewModel.onCellClick(0, 2)}"
            android:text='@{viewModel.cells["02"]}'
            style="@style/CellButton"/>

        <Button
            android:id="@+id/cell_10"
            android:onClick="@{() -> viewModel.onCellClick(1, 0)}"
            android:text='@{viewModel.cells["10"]}'
            style="@style/CellButton"/>

        <Button
            android:id="@+id/cell_11"
            android:onClick="@{() -> viewModel.onCellClick(1, 1)}"
            android:text='@{viewModel.cells["11"]}'
            style="@style/CellButton"/>

        <Button
            android:id="@+id/cell_12"
            android:onClick="@{() -> viewModel.onCellClick(1, 2)}"
            android:text='@{viewModel.cells["12"]}'
            style="@style/CellButton"/>

        <Button
            android:id="@+id/cell_20"
            android:onClick="@{() -> viewModel.onCellClick(2, 0)}"
            android:text='@{viewModel.cells["20"]}'
            style="@style/CellButton"/>

        <Button
            android:id="@+id/cell_21"
            android:onClick="@{() -> viewModel.onCellClick(2, 1)}"
            android:text='@{viewModel.cells["21"]}'
            style="@style/CellButton"/>

        <Button
            android:id="@+id/cell_22"
            android:onClick="@{() -> viewModel.onCellClick(2, 2)}"
            android:text='@{viewModel.cells["22"]}'
            style="@style/CellButton"/>

    </GridLayout>
</layout>