<resources>
    <string name="app_name">TicTacToe</string>
    <string name="winner_title">%1$s has won!</string>
    <string name="done">Play Again</string>
    <string name="game_drawn">Game Drawn</string>
</resources>
